@@ -1,4 +1,5 @@
 SVN
+- Add support for the Ingres BOOLEAN type
 - Fix bug 17302 - _close_statement is unable to free active statements
 - Fix bug 17207 - Under certain conditions the driver can SEGV when doing cleaning up
 - Fix bug 17198 - Unable to close non-result statements
